--- a/app/design/frontend/default/ves_fashion/template/page/2columns-left.phtml
+++ b/app/design/frontend/default/ves_fashion/template/page/2columns-left.phtml
@@ -141,6 +141,18 @@
         </section>
         <?php } ?>
        <section id="footer">
+
+        <?php if($ves_latest = $this->getChildHtml('footer_links_cms') || $customm_newsletter = $this->getChildHtml('customm_newsletter')){ ?>
+        <section id="ves-custom" class="ves-custom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-13 col-sm-7 col-xs-12"><?php echo $this->getChildHtml('footer_links_cms')?></div>
+                    <div class="col-lg-3 col-sm-5 col-xs-12"><?php echo $this->getChildHtml('customm_newsletter') ?></div>
+                </div>
+            </div>
+        </section>
+        <?php } ?>
+
          <?php if($footerTop = $helper->getModulesByPosition('footerTop')){ ?>
             <div class="footer-top">
                 <div class="container">
