--- a/skin/frontend/default/ves_fashion/css/bootstrap.css
+++ b/skin/frontend/default/ves_fashion/css/bootstrap.css
@@ -1558,7 +1558,7 @@ pre code {
 
   /* line 301, ../sass/bootstrap_lib/_grid.scss */
   .col-lg-9 {
-    width: 75%;
+    width: 100%;
   }
 
   /* line 302, ../sass/bootstrap_lib/_grid.scss */
@@ -1574,6 +1574,11 @@ pre code {
   /* line 304, ../sass/bootstrap_lib/_grid.scss */
   .col-lg-12 {
     width: 100%;
+  }
+
+    /* MAOBEL */
+  .col-lg-13 {
+    width: 75%;
   }
 
   /* line 307, ../sass/bootstrap_lib/_grid.scss */
