--- a/errors/default/503.phtml
+++ b/errors/default/503.phtml
@@ -24,13 +24,10 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<!-- [start] center -->
-    <div id="main" class="col-main">
-    <!-- [start] content -->
-        <div class="page-title">
-            <h1>Service Temporarily Unavailable</h1>
-        </div>
-        <p>The server is temporarily unable to service your request due to maintenance downtime or capacity problems. Please try again later.</p>
-    <!-- [end] content -->
-    </div>
-<!-- [end] center -->
+
+	<div style="margin-top:100px;">
+		<h1>Servicio temporalmente no disponible</h1>
+	    <div style="width:800px;margin: 0 auto;margin-top:70px;">
+	        <p style="text-align:center">El servidor está temporalmente no disponible por mantenimiento. Por favor intente mas tarde.</p>
+	    </div>
+   	</div>
