--- a/app/design/frontend/default/ves_fashion/template/catalog/product/view/type/options/configurable.phtml
+++ b/app/design/frontend/default/ves_fashion/template/catalog/product/view/type/options/configurable.phtml
@@ -42,12 +42,12 @@ $_attributes = Mage::helper('core')->decorateArray($this->getAllowAttributes());
                 <?php } ?>
                 <?php if ($_attribute->getAttributeId() == 965) {?>
                     <div>
-                        <a class="a-quickview cboxElement" href="media/wysiwyg/camisas-largo.png">¿Cuál es la diferencia?</a>
+                        <a class="cboxElement" href="media/wysiwyg/camisas-largo.png">¿Cuál es la diferencia?</a>
                     </div>
                 <?php } ?>
                 <?php if ($_attribute->getAttributeId() == 966) {?>
                     <div>
-                        <a class="a-quickview cboxElement" href="media/wysiwyg/camisas-silueta.png">¿Cuál es la diferencia?</a>
+                        <a class="cboxElement" href="media/wysiwyg/camisas-silueta.png">¿Cuál es la diferencia?</a>
                     </div>
                 <?php } ?>
             </div>
