--- a/js/venustheme/ves_tempcp/jquery/colorbox/colorbox.css
+++ b/js/venustheme/ves_tempcp/jquery/colorbox/colorbox.css
@@ -18,8 +18,8 @@
     Change the following styles to modify the appearance of ColorBox.  They are
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
-#cboxOverlay{background:#000;}
-#colorbox{}
+#cboxOverlay{background:#CCC;}
+#colorbox{top: 500px; left:150px;}
     #cboxTopLeft{width:14px; height:14px; background:url(images/controls.png) no-repeat 0 0;}
     #cboxTopCenter{height:14px; background:url(images/border.png) repeat-x top left;}
     #cboxTopRight{width:14px; height:14px; background:url(images/controls.png) no-repeat -36px 0;}
